--- a/style/style.css
+++ b/style/style.css
@@ -1,31 +1,182 @@
+@font-face{
+    font-family:'digital-clock-font';
+    src: url(/home/peterhenrique/repos/calculator/style/Orbitron-VariableFont_wght.ttf);
+   }
+
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 800px;
+    font-family: 'digital-clock-font';
+    font-size: 25px;
+}
+
+h1{
+    font-size: 40px;
+    font-weight: bolder;
+
+}
+
+button{
+    border-radius: 10%;
+
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 300px;
+    height:390px;
+    border: 20px blue;
+}
 .caixa {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 10px;
+    width:400px;
+    background-color: lightblue;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 10%;
+
 
 }
-
 .botões {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    background-color: gray;
-    height: 20px;
-    width: 20px;
+    background-color: rgb(196, 191, 191);
+    width:300px;
+    height: 300px;
+    max-width: 300px;    
+    flex-wrap: wrap;
+    gap: 0px;
+    
+
 }
+
+
+ul{
+    display:flex;    
+    list-style-type: none;
+    flex-wrap: wrap;
+    padding: 0px;
+    width: 300px;
+    margin: 0px;
+    gap:0px;
+    padding-inline-start: 0px;
+
+}
+
+.operands{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    height: 300px;
+    width: 200px;
+    padding: 0px;
+    gap: 0px;    
+}
+
+.numero{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 74px;
+    width: 66.66666px;
+    padding: 0px;
+}
+
+.signs{
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    align-items: center;
+    align-content: flex-start;
+    width: 100px;
+    height: 120px;
+    max-height: 120px;
+    gap: 0px;    
+}
+
+.sinal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 50px;
+    height: 60px;
+}
+
+.side{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    height: 300px;
+    width: 100px;
+    max-width: 100px;
+}
+
+.special{
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    height:50px;
+    width: 100px;
+}
+
+.specialismo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width: 50px;
+    max-height: 60px;
+    max-width: 50px;
+}
+
+.equal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height:68px;
+}
+
+.back {
+    display: flex;
+    width: 100px;
+    height: 50px;
+    padding: 0px;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
 
 
 .display {
     display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: lightgrey;
-    width: 400px;
+    width: 300px;
     height: 80px;
-    font-size: large;
+    font-size: larger;
 
 }
 
 .display-value{
     display: flex;
+    justify-content: center;
+    align-self: center;
 }
